--- a/Formatting.Tests/packages.config
+++ b/Formatting.Tests/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EditorUtils2015" version="1.5.0.1" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.11.0" version="11.0.50727" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.14.0" version="14.0.23205" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6071" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6070" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.Validation" version="14.0.50617-pre" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
