--- a/LanguageModel/LuaVSHost/packages.config
+++ b/LanguageModel/LuaVSHost/packages.config
@@ -20,5 +20,6 @@
   <package id="Microsoft.VisualStudio.Validation" version="14.0.50617-pre" targetFramework="net452" />
   <package id="Microsoft.VSSDK.BuildTools" version="14.0.23020-MVP" targetFramework="net452" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.0-beta003" targetFramework="net452" developmentDependency="true" />
+  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net452" />
   <package id="Validation" version="2.0.6.15003" targetFramework="net452" />
 </packages>
