--- a/src/Formatting.Tests/Formatting.Tests.csproj
+++ b/src/Formatting.Tests/Formatting.Tests.csproj
@@ -115,6 +115,7 @@
     <Compile Include="FormatRulesAndIndentation\MixedTests.cs" />
     <Compile Include="FormatRulesAndIndentation\NewlineRuleTesting.cs" />
     <Compile Include="IndentSpacesTests.cs" />
+    <Compile Include="OptionTesting\OptionTests.cs" />
     <Compile Include="SmartIndent\SmartIndentTests.cs" />
     <Compile Include="Tester.cs" />
     <Compile Include="FormatRulesAndIndentation\TrailingWhitespaceTests.cs" />
