--- a/src/LuaVSHost/LuaLanguageServicePackage.csproj
+++ b/src/LuaVSHost/LuaLanguageServicePackage.csproj
@@ -132,6 +132,12 @@
       <IncludeInVSIX>true</IncludeInVSIX>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="LuaLanguageServiceThemes.Designer.pkgdef" />
+    <Content Include="LuaLanguageServiceThemes.pkgdef">
+      <SubType>Component</SubType>
+      <IncludeInVSIX>true</IncludeInVSIX>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\Lua.Host.ico" />
   </ItemGroup>
   <ItemGroup>
