Add colors for demo

--- a/src/LuaVSHost/LuaLanguageServicePackage.csproj
+++ b/src/LuaVSHost/LuaLanguageServicePackage.csproj
@@ -132,11 +132,9 @@
       <IncludeInVSIX>true</IncludeInVSIX>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="LuaLanguageServiceThemes.Designer.pkgdef" />
     <Content Include="LuaLanguageServiceThemes.pkgdef">
-      <SubType>Component</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\Lua.Host.ico" />
   </ItemGroup>
