--- a/src/LuaVSHost/packages.config
+++ b/src/LuaVSHost/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.VisualStudio.CoreUtility" version="14.0.23107" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.Imaging" version="14.0.23020-MVP" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070-pre" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.Shell.14.0" version="14.0.23020-MVP" targetFramework="net452" />
@@ -13,6 +14,10 @@
   <package id="Microsoft.VisualStudio.Shell.Interop.12.0" version="12.0.30110-pre" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50727-pre" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30729-pre" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.Text.Data" version="14.0.23107" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.Text.Logic" version="14.0.23107" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.Text.UI" version="14.0.23107" targetFramework="net452" />
+  <package id="Microsoft.VisualStudio.Text.UI.Wpf" version="14.0.23107" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6070-pre" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50727-pre" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.Threading" version="14.0.50619-pre" targetFramework="net452" />
