update some project settings

--- a/src/LuaVSHost/LuaLanguageServicePackage.csproj
+++ b/src/LuaVSHost/LuaLanguageServicePackage.csproj
@@ -45,6 +45,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>LuaLanguageServicePackage.ruleset</CodeAnalysisRuleSet>
+    <CreateVsixContainer>False</CreateVsixContainer>
+    <DeployExtension>False</DeployExtension>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
