--- a/src/LuaDebuggerLauncher/LuaDebuggerLauncher.csproj
+++ b/src/LuaDebuggerLauncher/LuaDebuggerLauncher.csproj
@@ -173,6 +173,12 @@
       <Project>{6d2688fe-6fd8-44a8-b96a-6037457f72a7}</Project>
       <Name>Microsoft.VisualStudio.Debugger.Lua</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ProjectLauncher\ProjectLauncher.csproj">
+      <Project>{7DDAD15C-AF23-4B42-8ADE-CD3BB23DF072}</Project>
+      <Name>ProjectLauncher</Name>
+      <IncludeOutputGroupsInVSIX>BuiltProjectOutputGroup%3bBuiltProjectOutputGroupDependencies%3bGetCopyToOutputDirectoryItems%3bSatelliteDllsProjectOutputGroup%3bPkgdefProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
+      <IncludeOutputGroupsInVSIXLocalOnly>DebugSymbolsProjectOutputGroup%3b</IncludeOutputGroupsInVSIXLocalOnly>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">14.0</VisualStudioVersion>
