Close pipe when debuggee exits

--- a/src/ProjectLauncher/ProjectLauncher.csproj
+++ b/src/ProjectLauncher/ProjectLauncher.csproj
@@ -60,6 +60,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>true</RunCodeAnalysis>
+    <DeployExtension>False</DeployExtension>
+    <CreateVsixContainer>False</CreateVsixContainer>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
