Add nuget.org as package source
And remove unused one.

--- a/nuget.config
+++ b/nuget.config
@@ -4,6 +4,6 @@
     <add key="repositorypath" value="packages" />
   </config>
   <packageSources>
-    <add key="VSIDEProj (cpvsbuild)" value="\\cpvsbuild\drops\vsideproj\Packages" />
+    <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
