Don't install the VSIX when building outside VS
This fixes a build break at the command line and in a build lab.

--- a/src/LuaDebuggerLauncher/LuaDebuggerLauncher.csproj
+++ b/src/LuaDebuggerLauncher/LuaDebuggerLauncher.csproj
@@ -27,6 +27,7 @@
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <DeployExtension Condition=" '$(BuildingInsideVisualStudio)' != 'true' ">false</DeployExtension>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
