--- a/src/Formatting.Tests/packages.config
+++ b/src/Formatting.Tests/packages.config
@@ -10,10 +10,11 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="Validation" version="2.0.6.15003" targetFramework="net452" />
-  <package id="xunit" version="2.0.0" targetFramework="net452" />
+  <package id="xunit" version="2.1.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
-  <package id="xunit.assert" version="2.0.0" targetFramework="net452" />
-  <package id="xunit.core" version="2.0.0" targetFramework="net452" />
-  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net452" />
-  <package id="xunit.runner.visualstudio" version="2.0.0" targetFramework="net452" />
+  <package id="xunit.assert" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net452" />
 </packages>
