--- a/src/LanguageModel.Tests/packages.config
+++ b/src/LanguageModel.Tests/packages.config
@@ -9,9 +9,10 @@
   <package id="Microsoft.VisualStudio.Validation" version="14.0.50617-pre" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="Validation" version="2.0.5.14286" targetFramework="net452" />
-  <package id="xunit" version="2.1.0-beta3-build3029" targetFramework="net452" />
+  <package id="xunit" version="2.1.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
-  <package id="xunit.assert" version="2.1.0-beta3-build3029" targetFramework="net452" />
-  <package id="xunit.core" version="2.1.0-beta3-build3029" targetFramework="net452" />
-  <package id="xunit.extensibility.core" version="2.1.0-beta3-build3029" targetFramework="net452" />
+  <package id="xunit.assert" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net452" />
 </packages>
