--- a/.gitignore
+++ b/.gitignore
@@ -156,6 +156,8 @@ publish/
 *.nupkg
 # The packages folder can be ignored because of Package Restore
 **/packages/*
+*.nuget.props
+*.nuget.targets
 # except build/, which is used as an MSBuild target.
 !**/packages/build/
 # Uncomment if necessary however generally it will be regenerated when needed
