--- a/src/LanguageModel/project.json
+++ b/src/LanguageModel/project.json
@@ -1,13 +1,13 @@
 ﻿{
   "dependencies": {
     "ImmutableObjectGraph.Generation": "1.1.7-beta",
-    "Microsoft.VisualStudio.Validation": "14.0.51103",
-    "StyleCop.Analyzers": "1.0.0-rc3"
+    "Microsoft.VisualStudio.Validation": "14.1.111",
+    "StyleCop.Analyzers": "1.0.0"
   },
   "frameworks": {
-    ".NETFramework,Version=v4.5.2": { }
+    ".NETFramework,Version=v4.5.2": {}
   },
   "runtimes": {
-    "win": { }
+    "win": {}
   }
 }
